hphp/test/slow/enum-invalid-base/bool.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/bool.php on line 3
